--- a/angular-app/src/app/components/CovtestCrud/list-covtest/list-covtest.component.sass
+++ b/angular-app/src/app/components/CovtestCrud/list-covtest/list-covtest.component.sass
@@ -1,4 +1,65 @@
-.list
-    width: 700px
-    height: 200px
-    overflow: auto
+#card
+    display: flex
+    flex-direction: column 
+    justify-content: center
+    height: auto
+    width: 100%
+
+    #ListForm
+        margin-top: 20px
+        background-color: #F5F5F5
+
+        #query
+            display: flex
+            flex-direction: row
+            justify-content: center
+
+            >*
+                margin-right: 60px
+    
+    .listCard
+        margin-top: 50px
+        width: 98%
+        height: 700px
+        background-color: #F5F5F5
+
+        .mat-card-title
+            color: black
+            text-align: center
+
+        #tableDiv
+            height: 85%
+            overflow: auto
+
+            .mat-table
+                width: 100%
+                background-color: #F5F5F5
+                overflow: auto
+
+                th
+                    color: black
+                    border-color: black
+                    font-size: medium
+
+                td, tr
+                    color: black
+                    border-color: black
+
+        ::ng-deep input.mat-input-element 
+            color: black
+
+        ::ng-deep .mat-form-field.mat-focused .mat-form-field-label 
+            color: black !important
+
+        ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple
+            background-color: black !important
+
+        ::ng-deep .mat-form-field-empty.mat-form-field-label 
+            color: black
+
+        #submitB
+            margin-left: 20px
+
+#field2
+    margin-left: 50px
+    
