--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
@@ -5,7 +5,6 @@
     margin-bottom: 5px
     padding: 5px
     justify-content: space-between
-    //box-sizing: border-box
 
     .mat-icon-button
         .mat-icon
@@ -14,6 +13,100 @@
     #title
         margin-top: 10px
 
+#flexContainer
+    display: flex
+
+    #list
+        margin-top: 50px
+        margin-left: 50px
+        background-color: #F5F5F5
+        width: 20%
+
+        .mat-card-title
+            color: black
+
+        #tableContainer
+            width: 100%
+            height: 700px
+            overflow: auto
+            background-color: #F5F5F5
+
+
+            .mat-table
+                width: 100%
+                height: 100%
+                background-color: #F5F5F5
+
+                th
+                    color: black
+                    border-color: black
+                    font-size: medium
+
+                td, tr
+                    color: black
+                    border-color: black
+
+        
+    #container
+        width: 70%
+        margin-top: 50px
+        display: flex
+        flex-direction: column
+        align-items: center
+
+        .graphicCard
+            background-color: #F5F5F5
+            width: 50%
+            height: auto
+            display: flex
+            flex-direction: column
+            align-items: center
+            margin-bottom: 30px
+
+        #statistcs
+            width: 50%
+            height: auto
+            background-color: #F5F5F5
+            display: flex
+
+p
+    color: black
+    
+#dateLabel
+    color: black
+
+
+#graphic
+    margin-bottom: 20px
+
+#datePicker
+    width: 70%
+    display: flex
+    justify-content: space-between
+
+    .mat-raised-button
+        height: 20%
+    
+
+.labels
+    padding-top: 10px
+    color: black
 
 h1
     text-align: center
+
+#counter
+    margin-left: 50px
+    margin-bottom: 50px
+    width: 150px
+    background-color: #4898FF
+    text-align: center
+
+#search
+    margin-top: 25px
+
+
+#search2
+    text-align: center
+    margin-top: 9px
+    padding-left: 8px
