--- a/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.sass
+++ b/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.sass
@@ -1,2 +1,45 @@
+.top
+    display: flex
+    border-radius: 0px
+    margin-top: 0px
+    margin-bottom: 5px
+    padding: 5px
+    justify-content: space-between
 
+    .mat-icon-button
+        .mat-icon
+            padding-bottom: 2%
+
+    #title
+        margin-top: 10px
+
+.listCard
+    margin-top: 50px
+    width: 98%
+    height: 690px
+    background-color: #F5F5F5
+
+    .mat-card-title
+        color: black
+        text-align: center
+
+    #tableDiv
+        height: 85%
+        overflow: auto
+
+        .mat-table
+            width: 100%
+            background-color: #F5F5F5
+            overflow: auto
+
+            th
+                color: black
+                border-color: black
+                font-size: medium
+
+            td, tr
+                color: black
+                border-color: black
     
+    #addButton
+        margin-top: 20px
