--- a/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.html
@@ -1,15 +1,59 @@
-<div class="list">
-    <mat-grid-list cols="3" rowHeight="50px">
-        <ng-container *ngFor="let covtest of covtests; index as i">
-            <mat-grid-tile>{{covtest.code}}</mat-grid-tile>
-            <mat-grid-tile><button (click)="TestDetails( covtest.code )">Test Details</button></mat-grid-tile>
-            <mat-grid-tile type="date">{{ covtest.schedule | date :  "dd/MM/y"}}</mat-grid-tile>
-        </ng-container>
-    </mat-grid-list>
-</div>
+<mat-card class="top">
+    <label id="title">Bem vindo/a {{ name }}</label>
+    <div>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="seeProfile()">Meu Perfil
+            </button>
+            <button mat-menu-item (click)="logout()">Logout
+            </button>
+        </mat-menu>
+    </div>
+</mat-card>
 
-<div>
-    <button (click)="seeProfile()">Profile</button>
-    <button (click)="logout()">Logout</button>
-    <button (click)="add()">Adicionar pedido</button>
-</div>
+<mat-card class="listCard">
+    <mat-card-title>
+        Lista de Testes
+    </mat-card-title>
+    <div id="tableDiv">
+        <table mat-table [dataSource]="covtests" class="mat-elevation-z8">
+
+            <ng-container id="column" matColumnDef="ID">
+                <th mat-header-cell *matHeaderCellDef> ID do Teste </th>
+                <td mat-cell *matCellDef="let element"> {{ element.code }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Detalhes">
+                <th mat-header-cell *matHeaderCellDef> Detalhes </th>
+                <td mat-cell *matCellDef="let element"><button mat-raised-button
+                        (click)="TestDetails( element.code )">Detalhes do Teste</button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Data">
+                <th mat-header-cell *matHeaderCellDef> Data </th>
+                <td mat-cell *matCellDef="let element">
+                    <p type="date" *ngIf="element.schedule != 'undefined'"> {{ element.schedule | date :  "dd/MM/y"}}</p>
+                    <p *ngIf="element.schedule == undefined"> Aguarda Agendamento </p>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Resultado">
+                <th mat-header-cell *matHeaderCellDef> Resultado </th>
+                <td mat-cell *matCellDef="let element">
+                    <p *ngIf="element.testResult == 'positive'"> Positivo </p>
+                    <p *ngIf="element.testResult == 'awaiting result'"> Aguarda Resultado </p>
+                    <p *ngIf="element.testResult == 'negative'"> Negativo </p>
+                    <p *ngIf="element.testResult == 'undefined'"> Aguarda Resultado </p>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <button id="addButton" mat-raised-button (click)="add()">Adicionar pedido</button>
+</mat-card>
