--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
@@ -19,7 +19,7 @@
 
     <mat-card id="list">
         <mat-card-title>
-            Lista de Clientes
+            Lista de Utentes
         </mat-card-title>
         <div id="tableContainer">
 
